# tts-service

./: Cargo.toml  Dockerfile  docker-compose-example.yml
.github/workflows/: lint.yml
src/: espeak.rs  gcloud.rs  gtts.rs  main.rs  polly.rs
