[package]
name = "tts-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
incremental = true
debug = 0
lto = "thin"

[dependencies]
deadpool-redis = "0.15.1"
serde_json = "1"
tracing = "0.1"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
base64 = "0.22.1"
ipgen = "1"
bytes = "1"
jsonwebtoken = "9"
mp3-duration = "0.1"
itertools = "0.12"
aws-sdk-polly = "1.25.0"
small-fixed-array = { version = "0.4.4", features = ["serde"] }

[dependencies.fernet]
version = "0.2"
features = ["rustcrypto"]
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["smallvec", "fmt", "ansi", "parking_lot"]

[dependencies.axum]
version = "0.7"
default-features = false
features = ["http2", "json", "query", "tokio"]

[dependencies.tokio]
version = "1"
features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.redis]
version = "0.25"
default-features = false
features = ["aio", "tokio-comp"]

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls", "json"]
default-features = false

[dependencies.aws-config]
version = "1.4"
features = ["behavior-version-latest"]
